# Rubik-s-Cube-Solver

./: .gitignore  .zsh_history  CMakeLists.txt  Dockerfile  LeScript.sh  Makefile  README.md  __init__.py  build.sh  download_tables.py  requirements.txt
.devcontainer/: devcontainer.json
include/: CoordCube.hpp  CubieCube.hpp  Node.hpp  conio.h  corners.hpp  cubiecube.hpp  cubiecube_utils.hpp  define.hpp  deya_test.hpp  edges.hpp  heuristics.hpp  heuristics_tables.hpp  ida.hpp  ida_utils.hpp  kociemba.hpp  move_tables.hpp  moves.hpp  solver.hpp  tests.hpp  utils.hpp
src/: CoordCube.cpp  CubieCube.cpp  Node.cpp  RUBIKS.code-workspace  cubiecube.cpp  cubiecube_utils.cpp  deya_test.cpp  heuristics.cpp  heuristics_tables.cpp  heuristics_tables_phase2.cpp  ida.cpp  ida_utils.cpp  kociemba.cpp  main.cpp  move_tables.cpp  solver.cpp  utils.cpp  visu.py  visu_client.py  visu_server.py
visu/code/: __init__.py  cube_interactive.py  test.py
